--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             background: #f1f1f1;
         }
         .custom-scrollbar::-webkit-scrollbar-thumb {
-            background: #c7d2fe;
+            background: #36f72f;
             border-radius: 3px;
         }
         .custom-scrollbar::-webkit-scrollbar-thumb:hover {
