--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </header>
 
         <!-- Admin View (Panel de Administración) -->
-        <section id="adminView" class="flex-grow container mx-auto px-4 py-8 hidden">
+        <section id="adminView" class="flex-grow container mx-auto px-4 py-8">
             <!-- Search and Filter Bar -->
             <div class="bg-white rounded-xl shadow-md p-4 mb-8">
                 <div class="flex flex-col md:flex-row md:items-center space-y-4 md:space-y-0 md:space-x-4">
