--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             background: #f1f1f1;
         }
         .custom-scrollbar::-webkit-scrollbar-thumb {
-            background: #36f72f;
+            background: #c7d2fe;
             border-radius: 3px;
         }
         .custom-scrollbar::-webkit-scrollbar-thumb:hover {
@@ -109,7 +109,7 @@
         </header>
 
         <!-- Admin View (Panel de Administración) -->
-        <section id="adminView" class="flex-grow container mx-auto px-4 py-8">
+        <section id="adminView" class="flex-grow container mx-auto px-4 py-8 hidden">
             <!-- Search and Filter Bar -->
             <div class="bg-white rounded-xl shadow-md p-4 mb-8">
                 <div class="flex flex-col md:flex-row md:items-center space-y-4 md:space-y-0 md:space-x-4">
@@ -138,7 +138,7 @@
         </section>
 
         <!-- Public View (Productos) -->
-        <section id="publicView" class="flex-grow container mx-auto px-4 py-8">
+        <section id="publicView" class="flex-grow container mx auto px-4 py-8">
             <div class="bg-white rounded-xl shadow-md p-4 mb-8">
                 <h2 class="text-2xl font-bold text-indigo-600 mb-4">Catálogo de Productos</h2>
                 <!-- Search Bar for Public View -->
