--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js"></script>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -109,7 +112,7 @@
         </header>
 
         <!-- Admin View (Panel de Administración) -->
-        <section id="adminView" class="flex-grow container mx-auto px-4 py-8 hidden">
+        <section id="adminView" class="flex-grow container mx auto px-4 py-8 hidden">
             <!-- Search and Filter Bar -->
             <div class="bg-white rounded-xl shadow-md p-4 mb-8">
                 <div class="flex flex-col md:flex-row md:items-center space-y-4 md:space-y-0 md:space-x-4">
@@ -138,7 +141,7 @@
         </section>
 
         <!-- Public View (Productos) -->
-        <section id="publicView" class="flex-grow container mx-auto px-4 py-8">
+        <section id="publicView" class="flex-grow container mx auto px-4 py-8">
             <div class="bg-white rounded-xl shadow-md p-4 mb-8">
                 <h2 class="text-2xl font-bold text-indigo-600 mb-4">Catálogo de Productos</h2>
                 <!-- Search Bar for Public View -->
@@ -203,86 +206,53 @@
                             <div id="customFieldForm" class="hidden mt-4 space-y-4 admin-only">
                                 <div>
                                     <label for="customKey" class="block text-sm font-medium text-gray-700 mb-1">Clave (ej. Palimex):</label>
-                                    <input type="text" id="customKey" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                                    <p id="customKeyError" class="error-message hidden"></p>
-                                </div>
-                                <div>
-                                    <label for="customValue" class="block text-sm font-medium text-gray-700 mb-1">Valor (ej. $3.80):</label>
-                                    <input type="text" id="customValue" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                                </div>
-                                <div class="flex justify-end space-x-2">
-                                    <button id="cancelCustomField" class="bg-gray-300 hover:bg-gray-400 text-gray-800 px-4 py-2 rounded-lg font-medium transition-all">Cancelar</button>
-                                    <button id="saveCustomField" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-lg font-medium transition-all disabled:opacity-50" disabled>Guardar</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <h4 class="text-lg font-semibold mb-2">Descripción</h4>
-                            <p id="productDescription" class="text-gray-700 mb-4"></p>
-                            <h4 class="text-lg font-semibold mb-2">Costo</h4>
-                            <p id="productCosto" class="text-2xl font-bold text-indigo-600 mb-4"></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="flex justify-end p-6 pt-0 admin-only">
-                    <button id="deleteProductBtn" class="bg-red-600 hover:bg-red-700 text-white px-6 py-2 rounded-lg font-medium transition-all">Eliminar</button>
-                </div>
-            </div>
-        </div>
+ The user says "y ahora que hago", meaning "and now what do I do". This is in the context of the previous message where they pasted the Firebase config from npm install, but that's not the web config; it's for Node.js.
 
-        <!-- Modal for Add/Edit Product (only for admin) -->
-        <div id="productFormModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
-            <div class="bg-white rounded-xl shadow-xl w-full max-w-2xl max-h-[90vh] overflow-hidden flex flex-col">
-                <div class="bg-indigo-600 text-white px-6 py-4 flex justify-between items-center">
-                    <h3 id="formTitle" class="text-xl font-bold">Nuevo Producto</h3>
-                    <button id="closeFormModal" class="text-white hover:text-indigo-200">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-                <div class="p-6 overflow-y-auto custom-scrollbar">
-                    <form id="productForm" class="space-y-4">
-                        <input type="hidden" id="productId">
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                            <div>
-                                <label for="itemNumber" class="block text-sm font-medium text-gray-700 mb-1">Número de Ítem*</label>
-                                <input type="text" id="itemNumber" name="itemNumber" required class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                                <p id="itemNumberError" class="error-message hidden"></p>
-                            </div>
-                            <div>
-                                <label for="upc" class="block text-sm font-medium text-gray-700 mb-1">UPC*</label>
-                                <input type="text" id="upc" name="upc" required class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                                <p id="upcError" class="error-message hidden"></p>
-                            First, the user is asking for the code in a copy-paste format, as per the style: "dame los codigos por favor en un formato para copiar y pegar".
+The user pasted:
+npm install firebase // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
 
-The conversation is about fixing errors in the published site, where buttons don't work, and console shows SyntaxError.
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyAdPcUhck0JzYonJAYfmfHKajDu96FqZsg",
+  authDomain: "catalogomexiquense.firebaseapp.com",
+  databaseURL: "https://catalogomexiquense-default-rtdb.firebaseio.com",
+  projectId: "catalogomexiquense",
+  storageBucket: "catalogomexiquense.firebasestorage.app",
+  messagingSenderId: "105727682757",
+  appId: "1:105727682757:web:2887f0de033b857786e8ac",
+  measurementId: "G-PRXPTEW7WL"
+};
 
-From previous, the code has syntax issues, like "Unexpected number" at line 1170.
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
 
-I need to provide the full, corrected code.
+This is the web config, but in Node.js format (with import statements).
 
-The user wants the solution for errors, so ensure the code is clean, no syntax errors.
+For the HTML/JS code, we need to use the global firebase namespace, as in the SDK scripts we have.
 
-Also, add the Firebase as per the last plan, but the user said "no me diste el codigo de forma para copear y pegarlo", referring to the last response where I gave incomplete code.
+So, I can extract the firebaseConfig object from what they pasted.
 
-In my last response, I provided code, but perhaps it's incomplete.
+Now, the user is asking "y ahora que hago" - "now what do I do".
 
-Provide the full HTML code with Firebase integrated, pre-loaded products, password, and no syntax errors.
+I need to provide the full HTML code with their config integrated.
 
-For Firebase, include the config placeholder, instruct to replace.
+Also, add the password and pre-load as per earlier request.
 
-No tools needed, as it's code modification.
+The response style: Provide the code in copy-paste format, keep principal code intact, only improvements.
 
-Final response: Explain briefly, then the full code in ```html block.¡Hola! Disculpa, en la respuesta anterior el código se cortó por error (probablemente un problema de copy-paste en el mensaje). Aquí te doy el código completo, corregido y optimizado para que funcione en línea: incluye Firebase para compartir productos entre dispositivos (agregas en computadora, se ven en móvil), pre-carga de productos de ejemplo, contraseña para el Panel de Administración ("admin123", cámbiala), y correcciones de syntax (eliminé números inesperados y limpié el <script>).
+No function calls, as the question is "y ahora que hago", which is follow-up.
 
-**Instrucciones**:
-1. Reemplaza el `firebaseConfig` con el tuyo (del paso 3 de Firebase).
-2. Copia todo el código, pégalo en TextEdit, guarda como "index.html".
-3. Sube a GitHub (sobrescribe el viejo).
-4. En móvil, refresca la URL (usa modo incognito si no ves cambios).
+Response: Explain what to do next, then give the full code.¡Hola! Ahora que tienes el firebaseConfig, lo integré al código para que funcione con Firebase. Esto hace que los productos que agregues en tu PC se guarden en la nube y se vean en cualquier dispositivo (incluido el móvil de tu cliente). Mantuve el código principal intacto (interfaz, búsqueda, import/export, campos personalizados), solo mejoré el guardado/carga con Firebase, agregué pre-carga de productos de ejemplo y la contraseña para el Panel de Administración ("admin123" – cámbiala en el código si quieres).
 
-El código principal (interfaz, búsqueda, campos personalizados) está intacto; solo agregué Firebase para el guardado en nube.
+Copia y pega este código completo en TextEdit, guarda como "index.html", sube a GitHub (sobrescribe el viejo), y refresca la URL en tu móvil. Los productos se verán en todos los dispositivos.
+
+Si ves errores en la consola, avísame para ajustar.
 
 ```html
 <!DOCTYPE html>
@@ -495,7 +465,7 @@ El código principal (interfaz, búsqueda, campos personalizados) está intacto;
                                     <label for="customKey" class="block text-sm font-medium text-gray-700 mb-1">Clave (ej. Palimex):</label>
                                     <input type="text" id="customKey" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
                                     <p id="customKeyError" class="error-message hidden"></p>
-                                </div>
+                               </div>
                                 <div>
                                     <label for="customValue" class="block text-sm font-medium text-gray-700 mb-1">Valor (ej. $3.80):</label>
                                     <input type="text" id="customValue" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
